changed show method to features for better css body naming

--- a/app/assets/stylesheets/pages/_show_feature.scss
+++ b/app/assets/stylesheets/pages/_show_feature.scss
@@ -2,9 +2,12 @@
   display: flex;
   flex-direction: row;
   justify-content: space-between;
+  .summary {
+    width: 65%;
+    margin-right: 2%;
+  }
 }
 
-.summary {
-  width: 65%;
-  margin-right: 2%;
+.feature_links {
+
 }
