added links cards continer and images

--- a/app/assets/stylesheets/pages/_show_feature.scss
+++ b/app/assets/stylesheets/pages/_show_feature.scss
@@ -1,4 +1,4 @@
-.feature_overview {
+.overview {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
@@ -8,6 +8,6 @@
   }
 }
 
-.feature_links {
+.links {
 
 }
