--- a/app/views/shared/_testimonials.html.erb
+++ b/app/views/shared/_testimonials.html.erb
@@ -1,14 +1,18 @@
 <div class="testimonials container">
   <div class="row">
-    <div class="card-container">
       <% @testimonials.each do |testimonial| %>
+    <div class="card-container col-lg-4">
       <div class="card text-center">
-        <%= cl_image_tag(testimonial.cloundinary_img_id, width: 100, height: 100, :crop => :thumb, :gravity => :face) %>
-        <p><%= testimonial.quote %></p>
+        <%= cl_image_tag(testimonial.cloundinary_img_id, width: 100, height: 100, :crop => :thumb, :gravity => :face, class: "testimonial_avatar") %>
+        <p class="testimonial_quote"><em><%= testimonial.quote %></em></p>
         <p><strong><%= testimonial.name %></strong></p>
-        <p><%= testimonial.position %></p>, <strong><%= testimonial.company %></strong></p>
+        <% if testimonial.company.present? %>
+          <p><%= testimonial.position %><strong>, <%= testimonial.company %></strong></p>
+        <% else %>
+          <p><%= testimonial.position %></p>
+        <% end %>
       </div>
-      <% end %>
     </div>
+    <% end %>
   </div>
 </div>
