--- a/app/views/pages/feature.html.erb
+++ b/app/views/pages/feature.html.erb
@@ -17,7 +17,7 @@
   <div class="row">
     <div class="card-container">
       <% @features.each do |feature| %>
-      <div class="card text-center">
+      <div class="<%= 'active' if request.original_url == feature_url(feature) %> card text-center">
         <%= cl_image_tag(feature.cloundinary_img_id, width: 100, height: 100, crop: :fill) %>
         <%= feature.header %>
       </div>
@@ -38,7 +38,7 @@
       <ul>
         <% @feature.offers.each do |offer| %>
         <li><p><strong><%= offer.title %>:</strong> <%= offer.description %></p></li>
-      <% end %>
+        <% end %>
       </ul>
     </div>
   </div>
@@ -47,3 +47,6 @@
 <%= render 'shared/testimonials' %>
 
 <%= render 'shared/mailchimp_signup' %>
+
+<%= render 'shared/faq' %>
+
