--- a/app/assets/stylesheets/pages/_show_feature.scss
+++ b/app/assets/stylesheets/pages/_show_feature.scss
@@ -2,7 +2,7 @@
   display: flex;
   flex-direction: row;
   justify-content: space-between;
-  margin-bottom: 5%;
+  margin: 5% auto 5% auto;
   .summary {
     width: 65%;
     margin-right: 2%;
@@ -10,6 +10,7 @@
 }
 
 .links {
+  margin: 5% auto 5% auto;
   .card-container {
     width: 100%;
     display: flex;
@@ -18,9 +19,17 @@
   .card {
     display: flex;
     flex-direction: column;
+    opacity: 0.2;
+  }
+  .card:hover {
+    opacity: 1.0 !important;
   }
 }
 
+.offers {
+  margin: 5% auto 5% auto;
+}
+
 .active {
-  border: thin red solid;
+  opacity: 1.0 !important;
 }
