--- a/app/views/pages/feature.html.erb
+++ b/app/views/pages/feature.html.erb
@@ -1,10 +1,6 @@
-<h1>Pages#feature</h1>
-
-
-
 <div class="overview container">
   <div class="summary text-center">
-    <h1><%= @feature.header %></h1>
+    <h1><strong><%= @feature.header %></strong></h1>
     <h3><%= @feature.subhead %></h3>
     <p><%= @feature.description %></p>
     <div class='btn btn-success'> <a href='#' id="CTA-Apple">CTA: Free Download For Apple Mail</a></div>
@@ -17,10 +13,12 @@
   <div class="row">
     <div class="card-container">
       <% @features.each do |feature| %>
+      <%= link_to feature_path(feature) do %>
       <div class="<%= 'active' if request.original_url == feature_url(feature) %> card text-center">
         <%= cl_image_tag(feature.cloundinary_img_id, width: 100, height: 100, crop: :fill) %>
         <%= feature.header %>
       </div>
+      <% end %>
       <% end %>
     </div>
   </div>
