took out text underline in links container

--- a/app/assets/stylesheets/pages/_show_feature.scss
+++ b/app/assets/stylesheets/pages/_show_feature.scss
@@ -20,9 +20,14 @@
     display: flex;
     flex-direction: column;
     opacity: 0.2;
+    text-decoration: none;
+    color: $text-gray;
   }
   .card:hover {
     opacity: 1.0 !important;
+  }
+  a:hover {
+      text-decoration: none;
   }
 }
 
