--- a/app/assets/stylesheets/config/_fonts.scss
+++ b/app/assets/stylesheets/config/_fonts.scss
@@ -1,5 +1,5 @@
 // Import Google fonts
-@import url("https://fonts.googleapis.com/css?family=Open+Sans:300|Roboto:300,400");
+@import url("https://fonts.googleapis.com/css?family=Open+Sans:300|Roboto:300,400|Raleway:300,400");
 
 // Define fonts for body and headers
 $body-font: "Open Sans", "Helvetica", "sans-serif";
