--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -10,7 +10,7 @@
     <a href="#" class="navbar-item navbar-link">Overview</a>
     <a href="#" class="navbar-item navbar-link">Business</a>
     <a href="#" class="navbar-item navbar-link">Pricing</a>
-    <a href="#" class="btn-medium">Login</a>
+    <a href="#" class="btn-login">Login</a>
 
   </div>
 </div>
