--- a/app/assets/stylesheets/config/_colors.scss
+++ b/app/assets/stylesheets/config/_colors.scss
@@ -4,7 +4,7 @@
 $red: #EE5F5B;
 $blue: #7E9DD1;
 $yellow: #FDB631;
-$orange: #E67E22;
+$orange: #F1C16B;
 $green: #32B796;
 $gray: #000000;
 $light-gray: #FEFEFE;
