--- a/app/views/pages/feature.html.erb
+++ b/app/views/pages/feature.html.erb
@@ -16,19 +16,23 @@
       </div>
     </div>
   </div>
-  <%= cl_image_tag(@feature.cloundinary_img_id, width: 400, height: 300, crop: :fit) %>
+  <div class="feature-icon hidden-xs hidden-sm"">
+    <%= cl_image_tag(@feature.cloundinary_img_id, width: 400, height: 300, crop: :fit) %>
+  </div>
 </div>
 
 <div class="links container">
   <div class="row">
     <div class="card-container">
       <% @features.each do |feature| %>
+      <div class="col-xs-6 col-lg-2">
       <%= link_to feature_path(feature) do %>
-      <div class="<%= 'active' if request.original_url == feature_url(feature) %> card text-center">
+      <div class="<%= 'active' if request.original_url == feature_url(feature) %> card text-center ">
         <%= cl_image_tag(feature.cloundinary_img_id, width: 100, height: 100, crop: :fill) %>
         <%= feature.header %>
       </div>
       <% end %>
+      </div>
       <% end %>
     </div>
   </div>
