added padding to mobile repsonsiveness

--- a/app/assets/stylesheets/pages/_feature.scss
+++ b/app/assets/stylesheets/pages/_feature.scss
@@ -42,6 +42,11 @@
   a:hover {
       text-decoration: none;
   }
+  @media screen and (max-width: 768px){
+    *[class*='col-xs']{
+      padding:25px;
+    }
+  }
 }
 
 .offers {
