--- a/app/assets/stylesheets/components/_testimonials.scss
+++ b/app/assets/stylesheets/components/_testimonials.scss
@@ -3,4 +3,9 @@
   .testimonial_quote {
     text-align: start;
   }
+  @media screen and (max-width: 768px){
+    *[class*='col-xs']{
+      padding:25px;
+    }
+  }
 }
