--- a/app/views/shared/_testimonials.html.erb
+++ b/app/views/shared/_testimonials.html.erb
@@ -1,7 +1,7 @@
 <div class="testimonials container">
   <div class="row">
       <% @testimonials.each do |testimonial| %>
-    <div class="card-container col-lg-4">
+    <div class="card-container col-xs-12 col-lg-4">
       <div class="card text-center">
         <%= cl_image_tag(testimonial.cloundinary_img_id, width: 100, height: 100, :crop => :thumb, :gravity => :face, class: "testimonial_avatar") %>
         <p class="testimonial_quote"><em><%= testimonial.quote %></em></p>
