added homepage and footer

--- a/app/assets/stylesheets/components/_buttons.scss
+++ b/app/assets/stylesheets/components/_buttons.scss
@@ -1,4 +1,4 @@
-.btn-login {
+.btn-blue {
   color: $blue !important;
   border: 3px solid $blue;
   padding: 7px 20px;
@@ -7,7 +7,7 @@
   opacity: 0.6;
   font-weight: 900;
 }
-.btn-login:hover {
+.btn-blue:hover {
   opacity: 1;
   text-decoration: none;
   color: white !important;
