--- a/app/assets/stylesheets/components/_buttons.scss
+++ b/app/assets/stylesheets/components/_buttons.scss
@@ -39,3 +39,23 @@
   text-decoration: none;
   transition: all .2s;
 }
+
+.banner-content {
+  .btn-blue {
+    opacity: 1;
+    text-decoration: none;
+    color: white !important;
+    background-color:$blue;
+    font-size: 35px;
+  }
+  .btn-blue:hover {
+    color: white;
+    border: 3px solid $blue;
+    padding: 7px 20px;
+    border-radius: 10px;
+    font-weight: lighter;
+    opacity: 0.6;
+    font-weight: 900;
+    transition: all .2s;
+  }
+}
